# talkie

./: README.md  pyproject.toml
scripts/: convert_to_mlx.py
src/talkie/: benchmark.py  cli.py  generate.py  model.py  quant.py  sampling.py
src/talkie/mlx/: __init__.py  cli.py  generate.py  model.py
tests/: test_seed.py
